# marlowe-hydra-poc

./: README.md  cabal.project  default.nix  shell.nix
marlowe-hydra-poc/: marlowe-hydra-poc.cabal
marlowe-hydra-poc/app/: Main.hs
marlowe-hydra-tui/: marlowe-hydra-tui.cabal
marlowe-hydra-tui/app/: Main.hs  TUI.hs
