cabal-version:      2.4
name:               marlowe-hydra-poc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tomasz Rybarczyk
maintainer:         tomasz.rybarczyk@iohk.io yves.hauser@iohk.io pablo.lameja-seijas@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable marlowe-hydra-poc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    other-extensions:
      DataKinds
      FlexibleContexts
      LambdaCase
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      TypeApplications

    build-depends:
        base ^>=4.14.3.0
      , hydra-node
      , marlowe
      , marlowe-cli
      , marlowe-contracts
      , marlowe-actus


    hs-source-dirs:   app
    default-language: Haskell2010
