cabal-version:      2.4
name:               marlowe-hydra-tui
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yves Hauser
maintainer:         yves.hauser@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable marlowe-hydra-tui
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    TUI

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: aeson
                 , async
                 , base
                 , bytestring
                 , brick
                 , cardano-api
                 , serialise
                 , cardano-crypto-class
                 , cardano-ledger-alonzo
                 , cardano-ledger-core
                 , cardano-ledger-shelley
                 , cardano-ledger-shelley-ma
                 , containers
                 , errors
                 , hydra-cardano-api
                 , hydra-node
                 , hydra-prelude
                 , hydra-tui
                 , io-classes
                 , marlowe
                 , marlowe-cli
                 , microlens
                 , microlens-th
                 , mtl
                 , optparse-applicative
                 , one-line-aeson-text
                 , plutus-core
                 , plutus-ledger
                 , plutus-ledger-api
                 , QuickCheck
                 , text
                 , time
                 , vty
                 , websockets
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns

    ghc-options:        -threaded -rtsopts

